# pg_jiebaparser

./: CMakeLists.txt  README.md  config.h  fenci_funs.cpp  jbparser.c  jbparser.h  jiebaparser.control  jiebaparser.sql
VS/: zhparser.sln  zhparser.vcxproj
dict/: user.dict.utf8
jiaba/: DictTrie.hpp  FullSegment.hpp  HMMModel.hpp  HMMSegment.hpp  Jieba.hpp  KeywordExtractor.hpp  MPSegment.hpp  MixSegment.hpp  PosTagger.hpp  PreFilter.hpp  QuerySegment.hpp  SegmentBase.hpp  TextRankExtractor.hpp  Trie.hpp  Unicode.hpp
